# Algorithm-W-Step-By-Step

./: .ghci  .gitignore  AlgoW.cabal  stack.yaml
Data/ByteString/: Hex.hs
Data/Map/: Utils.hs
Lamdu/: Infer.hs
Lamdu/Expr/: Identifier.hs  Lens.hs  Nominal.hs  Pure.hs  Type.hs  TypeVars.hs  Val.hs
Lamdu/Expr/Type/: Match.hs
Lamdu/Expr/Val/: Annotated.hs  Arbitrary.hs
Lamdu/Infer/: Error.hs  Load.hs  Update.hs
Lamdu/Infer/Internal/: Monad.hs  Scheme.hs  Scope.hs  Subst.hs  Unify.hs
Text/PrettyPrint/: Utils.hs
doc/: SupersetConstraints.txt
src/: Test.hs  TestVals.hs  benchmark.hs
src/Lamdu/: Infer.hs
src/Lamdu/Expr/: Lens.hs  Pure.hs
src/Lamdu/Infer/: Error.hs  Load.hs  Unify.hs  Update.hs
src/Lamdu/Infer/Internal/: Constraints.hs  Monad.hs  Scheme.hs  Scope.hs  Subst.hs  Unify.hs
src/Text/PrettyPrint/: Utils.hs
test/: Test.hs  TestVals.hs  benchmark.hs
test/Lamdu/Expr/Val/: Arbitrary.hs
