name:                AlgoW
version:             0.1.0.0
synopsis:            Type inference, extending AlgorithmW step-by-step
license:             GPL-3
license-file:        LICENSE
author:              Eyal Lotem
                     Yair Chuchem
maintainer:          eyal.lotem@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

Flag noprettyclass
    Description: Using pretty>=1.1.2? If so, mustn't depend on prettyclass which was inlined into the pretty package

library
  ghc-options:         -Wall -O2 -Wnoncanonical-monad-instances -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  ghc-prof-options:    -fprof-auto -fprof-cafs
  exposed-modules:     Lamdu.Infer
                     , Lamdu.Infer.Error
                     , Lamdu.Infer.Load
                     , Lamdu.Infer.Unify
                     , Lamdu.Infer.Update
                     , Text.PrettyPrint.Utils
  other-modules:       Lamdu.Infer.Internal.Constraints
                     , Lamdu.Infer.Internal.Monad
                     , Lamdu.Infer.Internal.Scheme
                     , Lamdu.Infer.Internal.Scope
                     , Lamdu.Infer.Internal.Subst
                     , Lamdu.Infer.Internal.Unify
                     , Data.Map.Utils
  default-language:    Haskell2010
  build-depends:       base-compat >= 0.8.2 && < 0.11
                     , base >=4.7
                     , binary >=0.7 && <0.10
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5
                     , deepseq >=1.3 && <1.5
                     , lamdu-calculus
                     , lens >=4.1
                     , transformers >=0.3 && <0.6
  hs-source-dirs:   src
  if flag(noprettyclass)
    build-depends:     pretty >=1.1.2 && <1.2
  else
    build-depends:     pretty >=1.1 && <1.1.2
                     , prettyclass ==1.0.0.0

benchmark bench-builder-all
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          benchmark.hs
  other-modules:    TestVals
  build-depends:    AlgoW
                  , base-compat
                  , base
                  , criterion >= 1.0.0.0
                  , deepseq
                  , lamdu-calculus
                  , lens
                  , containers
                  , mtl
                  , bytestring
  if flag(noprettyclass)
    build-depends:     pretty
  else
    build-depends:     pretty, prettyclass
  ghc-options:         -Wall -O2
  ghc-prof-options:    -fprof-auto -fprof-cafs -rtsopts
  default-language:    Haskell2010

test-suite algow-test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  ghc-prof-options:    -fprof-auto -fprof-cafs -rtsopts
  main-is:             Test.hs
  other-modules:       TestVals
  hs-source-dirs:      test
  build-depends:       base-compat
                     , base
                     , AlgoW
                     , QuickCheck
                     , bytestring
                     , containers
                     , lamdu-calculus
                     , lens
                     , mtl
                     , test-framework >= 0.8.1.1
                     , test-framework-quickcheck2 >= 0.3.0.3
                     , transformers
  if flag(noprettyclass)
    build-depends:     pretty
  else
    build-depends:     pretty, prettyclass
  default-language:    Haskell2010
